--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,7 @@
     <string name="title_activity_setup1">Setup1Activity</string>
     <string name="title_activity_atools">AToolsActivity</string>
     <string name="title_activity_address_query">AddressQueryActivity</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
 
 </resources>
